Fix for overflowing code in docs

--- a/Web/FrontEnd/Css/site.less
+++ b/Web/FrontEnd/Css/site.less
@@ -103,6 +103,7 @@ pre {
     background: #f6f4ef;
     padding: 10px;
     border: solid 1px #bcb;
+    overflow: hidden;
 
     code {
         white-space: pre;
